--- a/servlets/Insert.html
+++ b/servlets/Insert.html
@@ -6,14 +6,17 @@
 <body>
 <h1> Enter the details of the fabric to be inserted </h1>
 <form action="Insert.jsp" method="GET">
-<h1>Fabric Type: <input type="text" name="type" /></h1><br><br>
-<h1>Fabric Color: <input type="text" name="color" /><h1><br><br>
-<h1>Fabric GSM: <input type="number" name="gsm" /></h1><br><br>
-<h1>Fabric Weight: <input type="number" name="weight" /></h1><br><br>
-<h1>Fabric Cost: <input type="number" name="cost" /></h1><br><br>
-<input type="submit" value="Submit" /><br><br>
-<h1>Click below to logout </h1><br>
-<a href="Login"> Logout </a>
+    <h1>Fabric Type: <input type="text" name="type" /></h1><br><br>
+    <h1>Fabric Color: <input type="text" name="color" /><h1><br><br>
+    <h1>Fabric GSM: <input type="number" name="gsm" /></h1><br><br>
+    <h1>Fabric Weight: <input type="number" name="weight" /></h1><br><br>
+    <h1>Fabric Cost: <input type="number" name="cost" /></h1><br><br>
+    <input type="submit" value="Add" /><br><br>
+    <h2>To logout click the button below</h2>
+      <br>
+      <form action="Login">
+          <input type="submit" value="Logout" />
+      </form>
 </form>
 </body>
 </html>
