--- a/servlets/Search.html
+++ b/servlets/Search.html
@@ -12,7 +12,7 @@
       <br /><br />
       <h1>Fabric GSM: <input type="text" name="gsm" /></h1>
       <br /><br />
-      <input type="submit" value="Submit" /><br /><br />
+      <input type="submit" value="Search" /><br /><br />
       <h2>To logout click the button below</h2>
       <br />
       <form action="Login">
