Search via Billno added

--- a/servlets/Bill/SearchBillno.html
+++ b/servlets/Bill/SearchBillno.html
@@ -5,14 +5,12 @@
   </head>
   <body>
     <h1>Enter the details of the fabric to be Searched</h1>
-    <form action="Search.jsp" method="GET">
-      <h1>Fabric Type: <input type="text" name="type" /></h1>
+    <form action="SearchBillno.jsp" method="GET">
+      <h1>Bill No: <input type="number" name="billno" /></h1>
       <br /><br />
-      <h1>Fabric Color: <input type="text" name="color" /></h1>
+      <h1>Bill Type: <input type="text" name="type" /></h1>
       <br /><br />
-      <h1>Fabric GSM: <input type="text" name="gsm" /></h1>
-      <br /><br />
-      <input type="submit" value="Search" /><br /><br />
+      <input type="submit" value="Search Bill" /><br /><br />
       <h2>To logout click the button below</h2>
       <br />
       <form action="Login">
