Added Id for the elements

--- a/servlets/Bill/SearchBillno.html
+++ b/servlets/Bill/SearchBillno.html
@@ -6,11 +6,11 @@
   <body>
     <h1>Enter the details of the fabric to be Searched</h1>
     <form action="SearchBillno.jsp" method="GET">
-      <h1>Bill No: <input type="number" name="billno" /></h1>
+      <h1>Bill No: <input type="number" id="sbillno" name="billno" /></h1>
       <br /><br />
-      <h1>Bill Type: <input type="text" name="type" /></h1>
+      <h1>Bill Type: <input type="text" id="stype" name="type" /></h1>
       <br /><br />
-      <input type="submit" value="Search Bill" /><br /><br />
+      <input type="submit" value="Search Bill" id="searchbillno" /><br /><br />
       <h2>To logout click the button below</h2>
       <br />
       <form action="Login">
