--- a/servlets/Stock/Search.html
+++ b/servlets/Stock/Search.html
@@ -6,13 +6,13 @@
   <body>
     <h1>Enter the details of the fabric to be Searched</h1>
     <form action="Search.jsp" method="GET">
-      <h1>Fabric Type: <input type="text" name="type" /></h1>
+      <h1>Fabric Type: <input type="text" id="ftype" name="type" /></h1>
       <br /><br />
-      <h1>Fabric Color: <input type="text" name="color" /></h1>
+      <h1>Fabric Color: <input type="text" id="fcolor" name="color" /></h1>
       <br /><br />
-      <h1>Fabric GSM: <input type="text" name="gsm" /></h1>
+      <h1>Fabric GSM: <input type="text" id="fgsm" name="gsm" /></h1>
       <br /><br />
-      <input type="submit" value="Search" /><br /><br />
+      <input type="submit" id="searchfabric" value="Search" /><br /><br />
       <h2>To logout click the button below</h2>
       <br />
       <form action="Login">
