--- a/servlets/Bill/PurchaseInsert.html
+++ b/servlets/Bill/PurchaseInsert.html
@@ -6,12 +6,12 @@
 <body>
 <h1> Enter the details of the fabric to be inserted </h1>
 <form action="PurchaseInsert.jsp" method="GET">
-    <h1>Provider Name: <input type="text" name="cname" /></h1><br>
-    <h1>Enter Bill no: <input type="number" name="billno" /><h1><br>
-    <h1>Total Weight: <input type="number" name="weight" /></h1><br>
-    <h1>Amount Recieved: <input type="number" name="amount" /></h1><br>
-    <h1>Date(DD/MM/YY): <input type="number" name="day" /><input type="number" name="month" /><input type="number" name="year" /></h1><br>
-    <input type="submit" value="Add Purchase Bill" /><br><br>
+    <h1>Provider Name: <input type="text" id="pcname" name="cname" /></h1><br>
+    <h1>Enter Bill no: <input type="number" id="pbillno" name="billno" /><h1><br>
+    <h1>Total Weight: <input type="number" id="pweight" name="weight" /></h1><br>
+    <h1>Amount Recieved: <input type="number" id="pamount" name="amount" /></h1><br>
+    <h1>Date(DD/MM/YY): <input type="number"  id="pday" name="day" /><input type="number" id="pmonth" name="month" /><input type="number" id="pyear" name="year" /></h1><br>
+    <input type="submit" id="addpurchasebill" value="Add Purchase Bill" /><br><br>
     <h2>To logout click the button below</h2>
       <br>
       <form action="Login">
