--- a/servlets/Bill/PurchaseInsert.html
+++ b/servlets/Bill/PurchaseInsert.html
@@ -10,7 +10,7 @@
     <h1>Enter Bill no: <input type="number" id="pbillno" name="billno" /><h1><br>
     <h1>Total Weight: <input type="number" id="pweight" name="weight" /></h1><br>
     <h1>Amount Recieved: <input type="number" id="pamount" name="amount" /></h1><br>
-    <h1>Date(DD/MM/YY): <input type="number"  id="pday" name="day" /><input type="number" id="pmonth" name="month" /><input type="number" id="pyear" name="year" /></h1><br>
+    <h1>Date(DD/MM/YY): <input type="number"  id="pday" name="day" /><input type="text" id="pmonth" name="month" /><input type="number" id="pyear" name="year" /></h1><br>
     <input type="submit" id="addpurchasebill" value="Add Purchase Bill" /><br><br>
     <h2>To logout click the button below</h2>
       <br>
