--- a/servlets/Bill/SalesInsert.html
+++ b/servlets/Bill/SalesInsert.html
@@ -10,7 +10,7 @@
     <h1>Enter Bill no: <input type="number" id="sbillno" name="billno" /><h1><br>
     <h1>Total Weight: <input type="number" id="sweight" name="weight" /></h1><br>
     <h1>Amount Recieved: <input type="number" id="samount" name="amount" /></h1><br>
-    <h1>Date(DD/MM/YY): <input type="number" id="sday" name="day" /><input type="number" id="smonth" name="month" /><input  type="number" id="syear" name="year" /></h1><br>
+    <h1>Date(DD/MM/YY): <input type="number" id="sday" name="day" /><input type="text" id="smonth" name="month" /><input  type="number" id="syear" name="year" /></h1><br>
     <input type="submit" id="addsalesbill" value="Add Sales Bill" /><br><br>
     <h2>To logout click the button below</h2>
       <br>
