--- a/servlets/Bill/SalesInsert.html
+++ b/servlets/Bill/SalesInsert.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Sales Bill Insert</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
 </head>
 <body>
 <h1> Enter the details of the fabric to be inserted </h1>
