--- a/servlets/Stock/Delete.html
+++ b/servlets/Stock/Delete.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>Remove Fabric</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css"
+    />
   </head>
   <body>
     <h1>Enter the details of the fabric to be removed</h1>
