--- a/servlets/Accounts/MonthlyProfit.html
+++ b/servlets/Accounts/MonthlyProfit.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>Find Monthly Profit</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css"
+    />
   </head>
   <body>
     <h1>Enter the Month details</h1>
