--- a/servlets/Stock/Delete.html
+++ b/servlets/Stock/Delete.html
@@ -11,14 +11,11 @@
     <h1>Enter the details of the fabric to be removed</h1>
     <form action="Delete.jsp" method="GET">
       <h1>Fabric Type: <input type="text" id="ftype" name="type" /></h1>
-      <br /><br />
       <h1>Fabric Color: <input type="text" id="fcolor" name="color" /></h1>
-      <br /><br />
       <h1>Fabric GSM: <input type="text" id="fgsm" name="gsm" /></h1>
-      <br /><br />
-      <input type="submit" id="removefabric" value="Remove" /><br /><br />
-      <h2>To logout click the button below</h2>
+      <input type="submit" id="removefabric" value="Remove Fabric" />
       <br />
+      <h2>To logout click the button below</h2>
       <form action="Login">
         <input type="submit" value="Logout" />
       </form>
