--- a/servlets/Stock/Insert.html
+++ b/servlets/Stock/Insert.html
@@ -5,14 +5,14 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
 </head>
 <body>
-<h1> Enter the details of the fabric to be inserted </h1>
+<h1> Enter the details of the fabric to be inserted </h1><br>
 <form action="Insert.jsp" method="GET">
-    <h1>Fabric Type: <input type="text" name="type" id="ftype" /></h1><br>
-    <h1>Fabric Color: <input type="text" name="color" id="fcolor" /><h1><br>
-    <h1>Fabric GSM: <input type="number" name="gsm" id="fgsm"/></h1><br>
-    <h1>Fabric Weight: <input type="number" name="weight" id="fweight"/></h1><br>
-    <h1>Fabric Cost: <input type="number" name="cost" id="fcost"/></h1><br>
-    <input type="submit" id="addfabric" value="Add Fabric" /><br><br>
+    <h1>Fabric Type: <input type="text" name="type" id="ftype" /></h1>
+    <h1>Fabric Color: <input type="text" name="color" id="fcolor" /><h1>
+    <h1>Fabric GSM: <input type="number" name="gsm" id="fgsm"/></h1>
+    <h1>Fabric Weight: <input type="number" name="weight" id="fweight"/></h1>
+    <h1>Fabric Cost: <input type="number" name="cost" id="fcost"/></h1>
+    <input type="submit" id="addfabric" value="Add Fabric" /><br>
     <h2>To logout click the button below</h2>
       <br>
       <form action="Login">
