--- a/servlets/Stock/Search.html
+++ b/servlets/Stock/Search.html
@@ -11,14 +11,10 @@
     <h1>Enter the details of the fabric to be Searched</h1>
     <form action="Search.jsp" method="GET">
       <h1>Fabric Type: <input type="text" id="ftype" name="type" /></h1>
-      <br /><br />
       <h1>Fabric Color: <input type="text" id="fcolor" name="color" /></h1>
-      <br /><br />
       <h1>Fabric GSM: <input type="text" id="fgsm" name="gsm" /></h1>
-      <br /><br />
-      <input type="submit" id="searchfabric" value="Search" /><br /><br />
+      <input type="submit" id="searchfabric" value="Search" /><br />
       <h2>To logout click the button below</h2>
-      <br />
       <form action="Login">
         <input type="submit" value="Logout" />
       </form>
