Added proper logout

--- a/servlets/Bill/SearchViaDate.html
+++ b/servlets/Bill/SearchViaDate.html
@@ -20,7 +20,7 @@
       <input type="submit" id="searchviadate" value="Search Bill" /><br />
       <h2>To logout click the button below</h2>
       <br />
-      <form action="Login">
+      <form action="../Login">
         <input type="submit" value="Logout" />
       </form>
     </form>
