--- a/servlets/Stock/Search.html
+++ b/servlets/Stock/Search.html
@@ -15,7 +15,7 @@
       <h1>Fabric GSM: <input type="text" id="fgsm" name="gsm" /></h1>
       <input type="submit" id="searchfabric" value="Search" /><br />
       <h2>To logout click the button below</h2>
-      <form action="Login">
+      <form action="../Login">
         <input type="submit" value="Logout" />
       </form>
     </form>
