--- a/servlets/Accounts/MonthlyProfit.html
+++ b/servlets/Accounts/MonthlyProfit.html
@@ -22,7 +22,7 @@
       /><br /><br />
       <h2>To logout click the button below</h2>
       <br />
-      <form action="Login">
+      <form action="../Login">
         <input type="submit" value="Logout" />
       </form>
     </form>
