--- a/servlets/Bill/PurchaseInsert.html
+++ b/servlets/Bill/PurchaseInsert.html
@@ -15,7 +15,7 @@
     <input type="submit" id="addpurchasebill" value="Add Purchase Bill" /><br>
     <h2>To logout click the button below</h2>
       <br>
-      <form action="Login">
+      <form action="../Login">
           <input type="submit" value="Logout" />
       </form>
 </form>
