--- a/servlets/Bill/SearchBillno.html
+++ b/servlets/Bill/SearchBillno.html
@@ -15,7 +15,7 @@
       <input type="submit" value="Search Bill" id="searchbillno" /><br />
       <h2>To logout click the button below</h2>
       <br />
-      <form action="Login">
+      <form action="../Login">
         <input type="submit" value="Logout" />
       </form>
     </form>
