--- a/servlets/Stock/Delete.html
+++ b/servlets/Stock/Delete.html
@@ -16,7 +16,7 @@
       <input type="submit" id="removefabric" value="Remove Fabric" />
       <br />
       <h2>To logout click the button below</h2>
-      <form action="Login">
+      <form action="../Login">
         <input type="submit" value="Logout" />
       </form>
     </form>
