--- a/servlets/Stock/Insert.html
+++ b/servlets/Stock/Insert.html
@@ -15,7 +15,7 @@
     <input type="submit" id="addfabric" value="Add Fabric" /><br>
     <h2>To logout click the button below</h2>
       <br>
-      <form action="Login">
+      <form action="../Login">
           <input type="submit" value="Logout" />
       </form>
 </form>
